# ymir-rs

./: Cargo.toml  LICENSE  README  README.md  justfile
configs/: development.yaml
examples/: load-test.js
examples/adaptor/: Cargo.toml
examples/adaptor/src/: app.rs
examples/adaptor/src/adapters/: metrics.rs
examples/demo/: Cargo.toml
examples/demo/src/: app.rs
examples/demo/src/adapters/: cache.rs
examples/simple/: Cargo.toml
examples/simple/src/: app.rs
src/: adapter.rs  boot.rs  config.rs  context.rs  errors.rs  health.rs  hooks.rs  job.rs  lib.rs  logo.rs  prelude.rs  render.rs  responses.rs  settings.rs  startup.rs  state.rs  types.rs
src/interception/: mod.rs  request_id.rs
src/rest/: cors.rs  errors.rs  health.rs  middlewares.rs  mod.rs  pagination.rs  ports.rs  request_id.rs  responses.rs
ymir/: Cargo.toml
ymir-openapi/: Cargo.toml
ymir-openapi/assets/: swagger.html
ymir-openapi/src/: lib.rs  prelude.rs  router.rs
ymir/configs/: development.yaml  production.yaml
ymir/src/: adapter.rs  config.rs  context.rs  errors.rs  health.rs  hook.rs  lib.rs  signal.rs  startup.rs  state.rs
ymir/src/interception/: request_id.rs
