[workspace]
resolver = "2"
members = [ "examples/adaptor","examples/simple", "ymir", "ymir-openapi"]
exclude = ["examples"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/suryakencana007/ymir-rs"

[workspace.dependencies]
ymir = { path = "ymir", version = "0.3.0" }

# async
async-trait = "0.1.83"
tokio = { version = "1.40.0", default-features = false }

# serialize
serde = { version = "1.0.210", default-features = false }
serde_json = "1.0.128"

# rest
axum = "0.8.0-alpha.1"
axum-extra = { version = "0.10.0-alpha.1", default-features = false }
http = "1.1.0"
tower = { version = "0.5.1", default-features = false }
tower-http = { version = "0.6.1", default-features = false }

# utils
argon2 = { version = "0.5.3", default-features = false }
byte-unit = "5.1.4"
config = { version = "0.14.0", default-features = false }
colored = "2.1.0"
regex = "1.11.0"
ulid = { version = "1.1.3", default-features = false }
thiserror = "1.0.64"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-layer = "0.3.3"
dotenvy = "0.15.7"
utoipa = { version = "5.1.2", default-features = false }
paste = "1.0.15"
