[package]
name = "ymir-openapi"
version = "0.3.0"
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[dependencies]
axum = { version = "0.8.0-alpha.1" }
paste = "1.0.15"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
utoipa = { version = "5.1.2", default-features = false, features = ["macros"] }

ymir = { path = "../", version = "*" }
