[package]
name = "ymir-openapi"
version = "0.3.0"
description = "Build OpenApi documentation with swagger ui in Ymir."
homepage = "https://github.com/suryakencana007/ymir-rs"
categories = ["development-tools", "web-programming"]
keywords = ["swagger-ui", "rest", "openapi"]
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ymir = { workspace = true }

axum = { workspace = true }
paste = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
utoipa = { workspace = true, features = ["macros"] }

[dev-dependencies]
ymir-openapi = { path = "." }
