[package]
name = "adaptor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.8.0-alpha.1", features = ["macros", "tracing"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
utoipa = { version = "5.1.1", features = ["axum_extras", "macros"] }
tower-layer = "0.3.3"
ymir = { path = "../../ymir", version = "*" }
ymir-openapi = { path = "../../ymir-openapi", version = "*" }

[[bin]]
name = "adaptor"
path = "src/bin/main.rs"
required-features = []
