[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.8.0-alpha.1", features = ["macros", "tracing"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }

ymir = { path = "../../", version = "*" }

[[bin]]
name = "tymir"
path = "src/bin/main.rs"
required-features = []
